attempt to fix white space issue using overflow hidden and removed normalize css

--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,7 @@ section.grey {
 #contact {
 padding-top: 8.5%;
 bottom: 0;
+right:0;
 border: 1px solid transparent;
 overflow: hidden;
 }
